<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_marginStart="8dp"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_marginEnd="8dp"
        tools:context=".MainActivity">

    <demo.gitprofiles.repos.presentation.view.CustomProgressBar
        android:id="@+id/customProgressMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="80dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/application_title"
        android:textAlignment="center"
        android:textSize="36sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/tvLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="146dp"
        android:layout_height="216dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="4dp"
        android:elevation="2dp"
        android:gravity="center_vertical"
        android:rotation="-90"
        android:shadowDx="10.5"
        android:shadowDy="10.2"
        android:textColor="#4F2B2B"
        android:textSize="27sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageAvatar"
        app:layout_constraintEnd_toStartOf="@+id/imageAvatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageAvatar"
        app:layout_constraintVertical_bias="1.0"
        app:layout_optimizationLevel="graph_wrap"
        app:layout_wrapBehaviorInParent="vertical_only" />

    <ImageView
        android:id="@+id/imageAvatar"
        style="@style/CardView.Dark"
        android:layout_width="225dp"
        android:layout_height="218dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/github_avatar"
        android:src="@mipmap/ic_github_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/ic_github_avatar_foreground" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/repositories"
        android:textSize="21sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="@+id/tvLogin"
        app:layout_constraintTop_toBottomOf="@+id/tvLogin" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rViewGithubRepos"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

</androidx.constraintlayout.widget.ConstraintLayout>