<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".RepoDetailsFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="4dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="4dp"
        android:elevation="16dp"
        app:cardBackgroundColor="#7883C3"
        app:cardCornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <WebView
                android:id="@+id/repoWView"
                android:layout_width="385dp"
                android:layout_height="0dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="2dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/htmlUrl" />

            <TextView
                android:id="@+id/repoNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/details_name_label"
                android:textSize="17sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/repoName"
                app:layout_constraintHorizontal_bias="0.066"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/repoName"
                style="@style/Base.CardView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/repoNameLabel"
                app:layout_constraintTop_toTopOf="@+id/repoNameLabel" />

            <TextView
                android:id="@+id/repoLanguageLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/details_language_label"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/repoNameLabel"
                app:layout_constraintTop_toBottomOf="@+id/repoNameLabel" />

            <TextView
                android:id="@+id/repoLanguage"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/repoName"
                app:layout_constraintTop_toBottomOf="@+id/repoName" />


            <TextView
                android:id="@+id/createdLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/created_label"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/repoLanguageLabel"
                app:layout_constraintTop_toBottomOf="@+id/repoLanguageLabel" />

            <TextView
                android:id="@+id/created"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/createdLabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/repoLanguage"
                app:layout_constraintTop_toBottomOf="@+id/repoLanguage" />

            <TextView
                android:id="@+id/updatedLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/updated_label"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/createdLabel"
                app:layout_constraintTop_toBottomOf="@+id/createdLabel" />

            <TextView
                android:id="@+id/updated"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/updatedLabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/created"
                app:layout_constraintTop_toBottomOf="@+id/created" />


            <TextView
                android:id="@+id/htmlUrlLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/details_htmlUrl_label"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/repoLanguageLabel"
                app:layout_constraintTop_toBottomOf="@+id/updatedLabel" />

            <TextView
                android:id="@+id/htmlUrl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/htmlUrlLabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/updated"
                app:layout_constraintTop_toBottomOf="@+id/updated" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <demo.gitprofiles.repos.presentation.view.CustomProgressBar
        android:id="@+id/customBarDetails"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>